syntax = "proto3";


option java_package = "ru.itis.hr_service.grpc.pb.cv";
option java_multiple_files = true;


service CVService {
  rpc GetAll(GetAllRequest) returns (GetAllResponse);
}

message CVResponse {
  string firstName = 1;
  string lastName = 2;
  string city = 3;
  int32 experience = 4;
  repeated string skills = 5;
}

message GetAllRequest {}

message GetAllResponse {
  repeated CVResponse cvs = 1;
}
