syntax = "proto3";


option java_package = "ru.itis.hr_service.grpc.pb.job";
option java_multiple_files = true;


service JobService {
  rpc GetAll(GetAllRequest) returns (GetAllResponse);
}

message JobResponse {
  string name = 1;
  int32 experience = 2;
  repeated string skills = 3;
  string description = 4;
  string city = 5;
}

message GetAllRequest {}

message GetAllResponse {
  repeated JobResponse jobs = 1;
}
